--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,46 @@
-# Prerequisites
-*.d
+# OS
+.DS_Store
 
-# Compiled Object files
-*.slo
-*.lo
+# Editors
+.vscode/
+
+# Node / Next.js
+node_modules/
+.next/
+.vercel/
+.turbo/
+dist/
+coverage/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.env
+.env.*
+!.env.example
+
+# Frontend (scoped)
+frontend/node_modules/
+frontend/.next/
+frontend/dist/
+
+# Backend / C++ / CMake
+build/
+cmake-build*/
+CMakeFiles/
+CMakeCache.txt
+compile_commands.json
 *.o
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
+*.a
 *.so
 *.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
 
-# debug information files
-*.dwo
+# DB / local data
+db/**/*.sqlite
+db/**/*.db
+db/**/*.log
+
+# Misc
+restored/
