--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,26 @@
 {
   "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start",
+    "lint": "eslint"
   },
   "dependencies": {
-    "next": "14.2.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "16.0.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@types/node": "24.5.2",
-    "@types/react": "19.1.13",
-    "typescript": "5.6.2"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
